--- a/404.html
+++ b/404.html
@@ -4,6 +4,11 @@ title: 404 - Page not found
 permalink: /404.html
 ---
 
+<head>
+	<link rel="icon" href="img/logo.ico" type="img/x-ico" />
+</head>
+
+
 <div class="text-center">
   <h1>Whoops, this page doesn't exist.</h1>
   <h1>Move along. (404 error)</h1>
