--- a/tags.html
+++ b/tags.html
@@ -14,6 +14,10 @@ title: 'Tag Index'
     <a href="#{{- tag -}}" class="btn btn-primary tag-btn"><i class="fa fa-tag" aria-hidden="true"></i>&nbsp;{{- tag -}}&nbsp;({{site.tags[tag].size}})</a>
 {%- endfor -%}
 
+<head>
+	<link rel="icon" href="img/logo.ico" type="img/x-ico" />
+</head>
+
 <div id="full-tags-list">
 {%- for tag in tags_list -%}
     <h2 id="{{- tag -}}" class="linked-section">
