--- a/404.html
+++ b/404.html
@@ -5,9 +5,8 @@ permalink: /404.html
 ---
 
 <head>
-	<link rel="icon" href="img/logo.ico" type="img/x-ico" />
+	<link rel="shortcut icon" href="img/logo.ico" />
 </head>
-
 
 <div class="text-center">
   <h1>Whoops, this page doesn't exist.</h1>
