--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ use-site-title: true
 ---
 
 <head>
-	<link rel="icon" href="img/logo.ico" type="img/x-ico" />
+	<link rel="shortcut icon" href="img/logo.ico" />
 </head>
 
 <div class="posts-list">
