--- a/tags.html
+++ b/tags.html
@@ -15,7 +15,7 @@ title: 'Tag Index'
 {%- endfor -%}
 
 <head>
-	<link rel="icon" href="img/logo.ico" type="img/x-ico" />
+	<link rel="shortcut icon" href="img/logo.ico" />
 </head>
 
 <div id="full-tags-list">
