--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@ permalink: /404.html
 ---
 
 <head>
-	<link rel="shortcut icon" href="img/logo.ico" />
+	<link rel="shortcut icon" href="img/logo.ico">
 </head>
 
 <div class="text-center">
